# slug

./: .clang-format  CMakeLists.txt  License.txt  README.md  ReadMe.adoc
doc/: CMakeLists.txt  Doxyfile
src/: CMakeLists.txt  slug.cpp
src/include/: slug.hpp
src/include/slug/: log.h
src/slug/: log.cc
test/: CMakeLists.txt  slug.test.cpp
test/src/: log-test.cc  slug-test.cc
